# MOOVR

./: .dockerignore  .gitmodules  404.html  Dockerfile  README.md  gh-pages-deploy.sh  index.html  manifest.json  sw.js
.github/workflows/: pages-deploy.yml
_next/static/0QnMtZszRU2NXYnLFbErN/: _buildManifest.js
_next/static/0S4fwwEV23cJuu-J2CXDC/: _buildManifest.js
_next/static/3j5NpAJSV_ONHbaV2PfE9/: _buildManifest.js
_next/static/7YyjW2fncA5NTAtifJpUs/: _buildManifest.js
_next/static/ERgTJUT_foUJmAO-ODGU0/: _buildManifest.js
_next/static/IzWy8ldBDy8Kp58b1Ftdf/: _buildManifest.js
_next/static/J2mwP415j55-Ynf-bmKFA/: _buildManifest.js
_next/static/LvoOXhpc2UK5i1P7o6jKP/: _buildManifest.js
_next/static/Neozz4yZi_wdP1hqy9aHV/: _buildManifest.js
_next/static/PuHpMKsWg1ezvFpj_ZMlM/: _buildManifest.js
_next/static/Q3XTlx58xgedAzrWl0gFz/: _buildManifest.js
_next/static/T8ErJ_4ZY9x5CpkNs1Ky2/: _buildManifest.js
client/: .env.development  .env.production  .eslintrc.json  README.md  environment.ts  next.config.js  package-lock.json  package.json  tsconfig.json
client/pages/: _app.tsx  index.tsx
client/public/: sw.js
client/services/: connection.ts  sensors.js
client/services/clients/: racket.ts  (+1 more)
client/src/: index.ts  manifest.json
client/styles/: globals.css
client/web/: .env.development  .env.production  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
server/: Cargo.toml
server/.cargo/: config.toml
server/src/: main.rs  observer_client.rs  racket_client.rs
server/src/client/: dynamic.rs  mod.rs  observer.rs  racket.rs
(+73 files in other folders)
