[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
futures = "0.3.21"
futures-util = "0.3.21"
log = "0.4.17"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "sync"] }
tokio-tungstenite = { version = "0.17.2", features = ["rustls"] } 
