[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
image = "0.24.4"
log = "0.4.17"
once_cell = "1.13.1"
quaternion = "0.4.1"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
tungstenite = { version = "0.17.2", features = ["rustls"] } 
